# tui-gradient-block

./: CHANGELOG.md  Cargo.toml  README.md  gdb.txt  readme.md
examples/: basic_gradient.rs  midnight_blurple.tape  minty_green.tape  misty_blue.tape  monochrome.tape  rusty_ruins.tape  zombie_dreams.tape
examples/themes/: midnight_blurple.rs  minty_green.rs  misty_blue.rs  monochrome.rs  rusty_ruins.rs  zombie_dreams.rs
src/: block_setter_functions.rs  border_styles.rs  enums.rs  gradient_block.rs  gradientblockfunctions.rs  lib.rs  macros.rs  predefined.rs  preset.rs  setter_functions.rs  types.rs
src/gradient_themes/dark/: t_midnight_blurple.rs
src/gradient_themes/light/: t_misty_blue.rs
src/gradient_themes/warm/: t_rusty_ruins.rs
src/structs/: border_segment.rs  border_symbols.rs  fill.rs  flags.rs  gradient.rs  predefined_theme.rs  title.rs
src/theme_presets/cool/: t_minty_green.rs  t_misty_blue.rs  t_zombie_dreams.rs
src/theme_presets/dark/: t_midnight_blurple.rs
src/theme_presets/misc/: t_monochrome.rs
src/theme_presets/warm/: t_rusty_ruins.rs
