[package]
name = "tui-gradient-block"
authors = ["F-77777"]
version = "0.1.3"
edition = "2024"
repository = "https://github.com/F-77777/tui-gradient-block"
description = "a pretty extension to the block widget using colorgrad"
license = "MIT"

[dependencies]
colorgrad = "0.7.0"
ratatui = { version = "0.29.0", features = ["serde"] }
serde_json = { version = "1.0.140", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
bitflags = "2.9.0"
derive_builder = "0.20.2"
getset = "0.1.5"
tui-rule = "0.1.2"
crossterm = "0.29.0"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[[example]]
name = "basic_gradient"
path = "./examples/basic_gradient.rs"

[[example]]
name = "midnight_blurple"
path = "./examples/themes/midnight_blurple.rs"
description = "A theme inspired by discord's midnight blurple"

[[example]]
name = "rusty_ruins"
path = "./examples/themes/rusty_ruins.rs"
description = "A warm, rusty theme"
[[example]]
name = "minty_green"
path = "./examples/themes/minty_green.rs"
description = "a minty green theme"
[[example]]
name = "zombie_dreams"
path = "./examples/themes/zombie_dreams.rs"
description = "an aesthetic, zombie themed preset"
[[example]]
name = "monochrome"
path = "./examples/themes/monochrome.rs"
description = "black and white"

[[example]]
name = "misty_blue"
path = "./examples/themes/misty_blue.rs"
description = "a soft, light blue theme"
